--- a/troy-nc-news/src/styles/ArticleCard.module.css
+++ b/troy-nc-news/src/styles/ArticleCard.module.css
@@ -6,32 +6,28 @@
   margin: 5% 20%;
   list-style-type: none;
 }
-/* .card {
-  display: grid;
-  grid-template-rows: 4rem 3rem;
-  grid-template-columns: 2fr 1fr;
-  grid-template-areas: "title author" "topic userTally";
-  border: 2px solid;
-  border-radius: 1rem;
-  margin: 10px 50px 20px 50px;
-  padding: 1rem;
-  background-color: rgb(255, 254, 254);
-} */
 
 .title {
   color: rgb(27, 23, 0);
-  text-decoration: none;
-  flex-grow: 5;
+  background-color: #e6e6e6;
+  align-content: center;
+  margin: 2% 10%;
+  font-size: 20px;
+  padding: 1%;
+  border-radius: 5px;
+  /* width: 70%; */
 }
 
 .card button {
   display: inline;
   border: solid;
+  border-width: 2px;
+  border-radius: 5px;
   size: 20%;
   margin: 2%;
   background-color: white;
 }
 
-.tally {
-  display: inline;
+.link {
+  text-decoration: none;
 }
