--- a/src/styles/Slider.module.css
+++ b/src/styles/Slider.module.css
@@ -12,7 +12,6 @@ h3 {
   align-items: center;
   justify-content: center;
   background-size: cover;
-  height: 300px;
 }
 
 .each-slide span {
@@ -45,5 +44,8 @@ h3 {
 }
 
 .img {
-  background-size: 100px;
+  background-size: 100%;
+  height: 475px;
+  /* width: 300px; */
+  background-repeat: no-repeat;
 }
