added error handlers and slight adjustments

--- a/src/styles/CommentCard.module.css
+++ b/src/styles/CommentCard.module.css
@@ -3,7 +3,7 @@ ul {
   padding: 0px;
 }
 .card {
-  background-color: #ededed;
+  background-color: #ba1f31;
   color: black;
   padding: 5%;
   margin: 5%;
