--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   align-content: center;
-  background-color: #e6e6e6;
+  background-color: #dedcdc;
 }
 
 .App-logo {
