--- a/src/styles/ArticleCard.module.css
+++ b/src/styles/ArticleCard.module.css
@@ -1,10 +1,14 @@
 .card {
   background-color: #ba1f31;
   border-radius: 15px;
-  color: #000000;
   padding: 2%;
   margin: 5% 20%;
   list-style-type: none;
+}
+
+.body {
+  color: #ffffff;
+  text-shadow: 2px 2px black;
 }
 
 .title {
